tests/negative/neg_rule3_expression.safe
-- Test: neg_rule3_expression
-- Description: Division where the divisor is a complex expression that may be zero.
--   The expression X * X - Y * Y is zero when X = Y or X = -Y.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p134:90a17a3b
-- Expected: REJECT division_by_zero

package expression_div_test

   subtype value is integer (-100 to 100)

   --  Compute: divides by X^2 - Y^2 which is zero when |X| = |Y|.
   function compute (n : value; x, y : value) returns integer
      denom : integer

      denom = integer (x) * integer (x) - integer (y) * integer (y)
      return integer (n) / denom  -- ERROR: Denom may be zero

